--- a/Contact/templates/Contact/Contact.html
+++ b/Contact/templates/Contact/Contact.html
@@ -28,21 +28,22 @@
         <div class="row">
             <div class="col-md-5 probootstrap-animate">
                 <form action="#" method="post" class="probootstrap-form">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <label for="name">Full Name</label>
-                        <input type="text" class="form-control" id="name" name="name">
+                        <label for="name">Name:</label>
+                        {{ form.contact_name }}
                     </div>
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email">
+                        <label for="email">Email:</label>
+                        {{ form.contact_email }}
                     </div>
                     <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" class="form-control" id="subject" name="subject">
+                        <label for="subject">Subject:</label>
+                        {{ form.subject }}
                     </div>
                     <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
+                        <label for="message">Message:</label>
+                        {{ form.content }}
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-primary btn-lg" id="submit" name="submit" value="Submit Form">
@@ -61,6 +62,29 @@
                 {% endfor %}
             </div>
         </div>
+    </div>
+</section>
+<section class="probootstrap-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
+                <h2>Why Choose Us</h2>
+            </div>
+        </div>
+        <div class="row">
+            {% for whyChooseUs in whyChooseUs.all %}
+            <div class="col-md-6">
+                <div class="service left-icon probootstrap-animate">
+                    <div class="icon"><img src="{{ whyChooseUs.iconImage.url }}" style="width:50px; height:auto" alt=""></div>
+                    <div class="text">
+                        <h3>{{ whyChooseUs.subHeader }}</h3>
+                        <p>{{ whyChooseUs.description }}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <!-- END row -->
     </div>
 </section>
 {% endblock%}
