--- a/Home/templates/Home/Home.html
+++ b/Home/templates/Home/Home.html
@@ -118,9 +118,6 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
                 <h2>Our Clients</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                    natus
-                    quos quibusdam soluta at.</p>
             </div>
         </div>
         <!-- END row -->
@@ -139,75 +136,20 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
                 <h2>Why Choose Us</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                    natus
-                    quos quibusdam soluta at.</p>
             </div>
         </div>
         <div class="row">
+            {% for whyChooseUs in whyChooseUs.all %}
             <div class="col-md-6">
                 <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/library.png' %}" style="width:50px; height:auto" alt=""></div>
+                    <div class="icon"><img src="{{ whyChooseUs.iconImage.url }}" style="width:50px; height:auto" alt=""></div>
                     <div class="text">
-                        <h3>Consectetur Adipisicing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
+                        <h3>{{ whyChooseUs.subHeader }}</h3>
+                        <p>{{ whyChooseUs.description }}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/presentation.png' %}" style="width:50px; height:auto"
-                            alt=""></div>
-                    <div class="text">
-                        <h3>Laboriosam Quod Dignissimos</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/library.png' %}" style="width:50px; height:auto" alt=""></div>
-                    <div class="text">
-                        <h3>Consectetur Adipisicing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/presentation.png' %}" style="width:50px; height:auto"
-                            alt=""></div>
-                    <div class="text">
-                        <h3>Laboriosam Quod Dignissimos</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/library.png' %}" style="width:50px; height:auto" alt=""></div>
-                    <div class="text">
-                        <h3>Consectetur Adipisicing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="service left-icon probootstrap-animate">
-                    <div class="icon"><img src="{% static 'img/presentation.png' %}" style="width:50px; height:auto"
-                            alt=""></div>
-                    <div class="text">
-                        <h3>Laboriosam Quod Dignissimos</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                            natus quos quibusdam soluta at.</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
         <!-- END row -->
     </div>
@@ -251,9 +193,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
                 <h2>Our International Partners</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore
-                    natus
-                    quos quibusdam soluta at.</p>
+                
             </div>
         </div>
         <!-- END row -->
