--- a/Clients/templates/Clients/Testimonials.html
+++ b/Clients/templates/Clients/Testimonials.html
@@ -48,19 +48,26 @@
                             </li>
                             {% endif %}
                             {% for num in Testimonial.paginator.page_range %}
+
                             {% if Testimonial.number == num %}
+
                             <li class="page-item"><a href="?page={{num}}" class="page-link active">{{num}}</a></li>
-                            {% elif num > Testimonial.number|add:'-3' and num < Testimonial.number|add:'3' %} <li class="page-item"><a
-                                    href="?page={{num}}" class="page-link">{{num}}</a></li>
-                                {% endif %}
-                                {% endfor %}
-                                {% if Testimonial.has_next %}
-                                <li class="page-item">
-                                    <a href="?page={{Testimonial.next_page_number}}" class="page-link">
-                                        <img src="{% static 'img/right-arrow.png' %}" alt="" style="width:12px; height:auto">
-                                    </a>
-                                </li>
-                                {% endif %}
+                            
+                            {% elif num > Testimonial.number|add:'-3' and num < Testimonial.number|add:'3' %} 
+
+                            <li class="page-item"><a href="?page={{num}}" class="page-link">{{num}}</a></li>
+
+                            {% endif %}
+                            {% endfor %}
+                            {% if Testimonial.has_next %}
+
+                            <li class="page-item">
+                                <a href="?page={{Testimonial.next_page_number}}" class="page-link">
+                                    <img src="{% static 'img/right-arrow.png' %}" alt="" style="width:12px; height:auto">
+                                 </a>
+                            </li>
+
+                            {% endif %}
 
                         </div>
                     </ul>
