--- a/Home/templates/Home/Home.html
+++ b/Home/templates/Home/Home.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <div class="zoom">
-                    <a href="services.html" class="btn btn-primary btn-lg probootstrap-animate" style="font-size:20px">
+                    <a href="{% url 'Services' %}" class="btn btn-primary btn-lg probootstrap-animate" style="font-size:20px">
                         More Services </a>
                 </div>
             </div>
