--- a/Footer/templates/Base/base.html
+++ b/Footer/templates/Base/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href = "{% static 'img/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
     <title>Business Growth</title>
     <meta name="description" content=" ">
     <meta name="keywords" content=" ">
