--- a/Gallery/templates/Gallery/Gallery.html
+++ b/Gallery/templates/Gallery/Gallery.html
@@ -11,7 +11,7 @@
 
 <section class="flexslider">
     <ul class="slides">
-        {% for Slider in Slider.all %}
+        {% for Slider in imagesSlider.all %}
         <li style="background-image: url({{ Slider.image.url }})" class="overlay">
             <div class="container">
                 <div class="row">
