--- a/Contact/templates/Contact/Contact.html
+++ b/Contact/templates/Contact/Contact.html
@@ -22,7 +22,17 @@
         {% endfor %}
     </ul>
 </section>
+{% if message %}
 
+    <div class="container probootstrap-bg-white">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
+            <h1>{{message}}</h1>
+            </div>
+        </div>
+    </div>
+
+{% endif %}
 <section class="probootstrap-section probootstrap-bg-white">
     <div class="container">
         <div class="row">
