--- a/Gallery/templates/Gallery/Videos.html
+++ b/Gallery/templates/Gallery/Videos.html
@@ -46,7 +46,7 @@
             {% else %}
             <div class="col-md-6" style="margin-bottom:20px">
                 <h3>{{ Video.videoHeader }}</h3>
-                <video width="100%" height="315" controls>
+                <video width="100%" height="315" controls controlsList="nodownload">
                     <source src="{{ Video.videoFile.url }}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
