--- a/BusinessGrowthProject/static/css/styles-merged.css
+++ b/BusinessGrowthProject/static/css/styles-merged.css
@@ -5289,7 +5289,8 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .container>.navbar-collapse,
 .container>.navbar-header {
   margin-right: -15px;
-  margin-left: -15px
+  margin-left: -15px;
+  border:none
 }
 
 @media (min-width:768px) {
