--- a/Footer/templates/Base/base.html
+++ b/Footer/templates/Base/base.html
@@ -8,7 +8,7 @@
     <title>Business Growth</title>
     <meta name="description" content=" ">
     <meta name="keywords" content=" ">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair|Open+Sans" rel="stylesheet">
+    <link href="{% static 'css/font.css' %} " rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/styles-merged.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
