--- a/BusinessGrowthProject/static/css/font/font.css
+++ b/BusinessGrowthProject/static/css/font/font.css
@@ -3,7 +3,7 @@
     font-family: 'Bellefair';
     font-style: normal;
     font-weight: 400;
-    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(https://fonts.gstatic.com/s/bellefair/v4/kJExBuYY6AAuhiXUxG1N-vo3lOc.woff2) format('woff2');
+    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(1kJExBuYY6AAuhiXUxG1N-vo3lOc.woff2) format('woff2');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
   }
   /* latin-ext */
@@ -11,7 +11,7 @@
     font-family: 'Bellefair';
     font-style: normal;
     font-weight: 400;
-    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(https://fonts.gstatic.com/s/bellefair/v4/kJExBuYY6AAuhiXUxG1N9vo3lOc.woff2) format('woff2');
+    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(2kJExBuYY6AAuhiXUxG1N9vo3lOc.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -19,7 +19,7 @@
     font-family: 'Bellefair';
     font-style: normal;
     font-weight: 400;
-    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(https://fonts.gstatic.com/s/bellefair/v4/kJExBuYY6AAuhiXUxG1N-Po3.woff2) format('woff2');
+    src: local('Bellefair Regular'), local('Bellefair-Regular'), url(3kJExBuYY6AAuhiXUxG1N-Po3.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   /* cyrillic-ext */
@@ -27,7 +27,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFWJ0bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(4mem8YaGs126MiZpBA-UFWJ0bbck.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   }
   /* cyrillic */
@@ -35,7 +35,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFUZ0bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(5mem8YaGs126MiZpBA-UFUZ0bbck.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
   }
   /* greek-ext */
@@ -43,7 +43,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFWZ0bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(6mem8YaGs126MiZpBA-UFWZ0bbck.woff2) format('woff2');
     unicode-range: U+1F00-1FFF;
   }
   /* greek */
@@ -51,7 +51,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFVp0bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(7mem8YaGs126MiZpBA-UFVp0bbck.woff2) format('woff2');
     unicode-range: U+0370-03FF;
   }
   /* vietnamese */
@@ -59,7 +59,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFWp0bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(8mem8YaGs126MiZpBA-UFWp0bbck.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
   }
   /* latin-ext */
@@ -67,7 +67,7 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(9mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
@@ -75,6 +75,6 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
-    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url(10mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
