Test block p01.notifa.info

--- a/Footer/templates/Base/base.html
+++ b/Footer/templates/Base/base.html
@@ -15,6 +15,7 @@
     {% block links %}
 
     {% endblock %}
+    <!-- </head> -->
 </head>
 
 <body>
@@ -100,6 +101,7 @@
     {% block scripts %}
 
     {% endblock %}
+    <!-- </body></html> -->
 </body>
 
 </html>
