fixed image detail product photo (services)

--- a/Services/templates/Services/Product.html
+++ b/Services/templates/Services/Product.html
@@ -42,7 +42,7 @@
         <!-- END row -->
 
         <div class="row mb30">
-            <div class="col-md-6">
+            <div class="col-md-6" style = "margin-bottom: 20px">
                 {% if Product.image1 %}
                 <img src="{{ Product.image1.url }}" class="img-responsive">
                 {% endif %}
@@ -72,7 +72,7 @@
         <!-- END row -->
 
         <div class="row mb30">
-            <div class="col-md-6">
+            <div class="col-md-6" style = "margin-bottom: 20px">
                 {% if Product.image1 %}
                 <img src="{{ Product.image1.url }}" class="img-responsive">
                 {% endif %}
