--- a/Services/templates/Services/Services.html
+++ b/Services/templates/Services/Services.html
@@ -71,14 +71,21 @@
 
 <section class="probootstrap-section">
     <div class="container">
-        <div class="row">
+        <div class="row" >
             <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
                 <h2>Why Choose Us</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display:         flex;
+        flex-wrap: wrap;">
             {% for whyChooseUs in whyChooseUs.all %}
-            <div class="col-md-6">
+            <div class="col-md-6" style='
+            display: flex;
+            flex-direction: column;'>
                 <div class="service left-icon probootstrap-animate">
                     <div class="icon"><img src="{{ whyChooseUs.iconImage.url }}" style="width:50px; height:auto" alt=""></div>
                     <div class="text">
