whychoose us min-wdith: 134px

--- a/Home/templates/Home/Home.html
+++ b/Home/templates/Home/Home.html
@@ -147,7 +147,7 @@
         </div>
         <div class="row">
             {% for whyChooseUs in whyChooseUs.all %}
-            <div class="col-md-6">
+            <div class="col-md-6 whychooseus">
                 <div class="service left-icon probootstrap-animate">
                     <div class="icon"><img src="{{ whyChooseUs.iconImage.url }}" style="width:50px; height:auto" alt=""></div>
                     <div class="text">
